# clustering-practice

./: .gitignore  GEMINI.md  README.md  gradio_app.py  main.py  pyproject.toml  requirements.txt  tags.json
.devcontainer/: Dockerfile  devcontainer.json
data/: input.csv  output.csv  tags.json
src/: analysis.py  clustering.py  pipeline.py  preprocessing.py  scoring.py  visualization.py
tests/: test_gradio_logic.py  test_pipeline.py
